1999-01-02  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmButtons/FvwmButtons.c (Loop): Deleting panels doesn't delete
	FvwmButtons anymore. Destroying a panel still kills it however (and it
	is the right thing to do).

1998-12-27  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmButtons/FvwmButtons.1:
	* FvwmButtons/FvwmButtons.c (Slide):
	* FvwmButtons/parse.c (match_string): fix for panel geometry
	* FvwmButtons/FvwmButtons.c (AddButtonAction):
	(match_string): Action needs not to be quoted anymore; multiple
	quoting bugfix

1998-12-22  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmIconMan/FvwmIconMan.c:
	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconMan/x.c: applied signal handling patch by Chrin Rankin

	* FvwmButtons/FvwmButtons.c: coredump fixed: if an action was defined
	only for a specific button but another button was pressed a NULL
	pointer was referenced.

	* FvwmButtons/parse.c (match_string): possible coredumps fixed:
	accessed t[1] if t[0] == 0 (char *t).
	(match_string): fixed parsing bug in Icon
	(match_string): fixed possible coredump with b->title[1],
	b->icon_file[1]

1998-12-17  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/FvwmEvent.c:
	* FvwmPager/FvwmPager.c:
	* FvwmButtons/FvwmButtons.c: applied signal handler patches by Chris
	Rankin

	* FvwmIconMan/FvwmIconMan.1: added missing double quote

	* FvwmButtons/FvwmButtons.c: applied panel direction bugfix by
	J. Joshua Feng

1998-12-16  Paul D. Smith  <psmith@gnu.org>

	* FvwmIconMan/functions.c (builtin_refresh): Return a valid value.

	* FvwmButtons/FvwmButtons.c (RecursiveLoadData): Cast fprintf arg.

	* FvwmBacker/FvwmBacker.c (main): Add return to silence warning.

	* FvwmIconMan/FvwmIconMan.h: Remove ConsoleMessage() prototype (in
	debug.h now).

	* FvwmIconMan/FvwmIconMan.c (main): Pass filename to OpenConsole().

	* FvwmIconMan/debug.c: Rewrite.  New signatures for all
	functions.

	* FvwmIconMan/debug.h: Disable debugging by default.  Print all